<resources>
    <string name="app_name">Movie App</string>

    <!--EXCEPTIONS & ERRORS-->
    <string name="exception_no_connectivity">No internet connection, please try again later.</string>
    <string name="exception_undefined">Unknown error, please contact our support.</string>
    <string name="action_retry">Retry</string>
    <string name="no_movies_found">No movies found...</string>
    <string name="movie_release_date">Release Date</string>
    <string name="movie_genre">Genres</string>
    <string name="movie_vote">Vote Average</string>
    <string name="movie_original_title">Original Title</string>
    <string name="action_filter">Filter</string>
    <string name="action_search">Search</string>
    <string name="from_date">from Date</string>
    <string name="to_date">To Date</string>
    <string name="invalid_date">The date range selected is invalid. Please verify them</string>
    <string name="movie_poster_desc">movie poster</string>
    <string name="close_button_desc">close button</string>
    <string name="clear_to_date_desc">Clear the date after filter</string>
    <string name="clear_from_date_desc">Clear the date from filter</string>

    <plurals name="vote_format">
        <item quantity="zero">No vote information</item>
        <item quantity="one">%2f (%d vote)</item>
        <item quantity="other">%2f (%d votes)</item>
    </plurals>
</resources>
